--- a/first.html
+++ b/first.html
@@ -31,7 +31,7 @@
       <li>Nelsoni (extinct)</li>
     </ul>
     <h3>Features</h3>
-    <p>Brown bears are not always completely brown. Some can be reddish or yellowish. They have very large, curved claws and huge paws. Male brown bears are often 30% larger than female brown bears. They can range from 5 feet to 9 feet from head to toe.</p>
+    <p>Brown bears are not always completely brown. Some can be reddish or yellowish. They<br> have very large, curved claws and huge paws. Male brown bears are often 30% larger than female brown bears. They can range from 5 feet to 9 feet from head to toe.</p>
   </div>
   <div id="habitat">
     <h2>Habitat</h2>
@@ -42,7 +42,7 @@
       <li>Canada</li>
     </ol>
     <h3>Countries with Small Brown Bear Populations</h3>
-    <p>Some countries with smaller brown bear populations include Armenia, Belarus, Bulgaria, China, Finland, France, Greece, India, Japan, Nepal, Poland, Romania, Slovenia, Turkmenistan, and Uzbekistan.</p>
+    <p>Some countries with smaller brown bear populations include Armenia, Belarus, Bulgaria,<br> China, Finland, France, Greece, India, Japan, Nepal, Poland, Romania, Slovenia, Turkmenistan, and Uzbekistan.</p>
   </div>
   <div id="media">
     <h2>Media</h2>
